# cookiecutter-fastapi-django

./: cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: Dockerfile  pyproject.toml
{{cookiecutter.project_slug}}/src/: manage.py  settings.py
{{cookiecutter.project_slug}}/src/commands/: example_command.py
{{cookiecutter.project_slug}}/src/management/: cli.py
{{cookiecutter.project_slug}}/src/management/commands/: calculator.py
{{cookiecutter.project_slug}}/src/migrations/: env.py
{{cookiecutter.project_slug}}/src/models/: __init__.py
{{cookiecutter.project_slug}}/src/web/: app.py
{{cookiecutter.project_slug}}/src/web/api/example/: __init__.py  constants.py  schemas.py  services.py  views.py
